# bitbake-rs-example

./: Cargo.toml  LICENSE  bitbake-rs-example.inc  bitbake-rs-example_0.1.0.bb  ipinfo.service
src/: main.rs
